<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTargetPrinter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/tvTargetPrinter"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvItemCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/tvItemCode"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/tvItemName"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvItemPrice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/tvItemPrice"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvItemDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/tvItemDate"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvPrtAmount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/tvPrtAmount"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvDiscountRate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/tvDiscountRate"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvTaxRate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/tvTaxRate"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edTargetPrinter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:focusable="false"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="text"
                android:text="@string/edTargetPrinter"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edItemCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="text"
                android:text="Name"
                android:textSize="15sp"
                android:focusable="false"
                />

            <EditText
                android:id="@+id/edItemName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="text"
                android:text="Name"
                android:textSize="15sp"
                android:focusable="false"
                />

            <EditText
                android:id="@+id/edItemPrice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="text"
                android:text="Name"
                android:textSize="15sp"
                android:focusable="false"
                />


            <EditText
                android:id="@+id/edItemDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="text"
                android:text="Name"
                android:textSize="15sp"
                android:focusable="false"
                />

            <EditText
                android:id="@+id/edPrtAmount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="number"
                android:text="Name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edDiscountRate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="number"
                android:text="@string/edDiscountRate"
                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/tbTax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="@string/tbTaxOff"
                android:textOn="" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNfcMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tvNfcMode"
                android:textOn=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvScanMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tvScanMode"
                android:textOn=""
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tvFastMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tvFastMode"
                android:textOn=""
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tbNfcMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="@string/tbNfcModeOff"
                android:textOn="" />

            <ToggleButton
                android:id="@+id/tbScanMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="@string/tbScanModeOff"
                android:textOn="" />

            <ToggleButton
                android:id="@+id/tbFastMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="@string/tbFastModeOff"
                android:textOn="" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tvLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgtvLogDefault" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrint" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>